Configure InfluxDB TLS/SSL with selfsigned certificates

--- a/ansible/templates/docker/influxdb.yml.j2
+++ b/ansible/templates/docker/influxdb.yml.j2
@@ -7,5 +7,10 @@ services:
     container_name: influxdb
     ports:
       - "8086:8086"
+    environment:
+      - INFLUXD_TLS_CERT=/etc/ssl/vsh.crt
+      - INFLUXD_TLS_KEY=/etc/ssl/vsh.key
     volumes:
       - ./influx:/var/lib/influxd
+      - ./ssl/vsh.crt:/etc/ssl/vsh.crt
+      - ./ssl/vsh.key:/etc/ssl/vsh.key
